--- a/absence-tracker/src/main/webapp/index.xhtml
+++ b/absence-tracker/src/main/webapp/index.xhtml
@@ -10,13 +10,13 @@
 </h:head>
 <h:body>
     <h2>JSF 2.0 Hello World Example - hello.xhtml</h2>
-    <h:form>
+    <h:form id="welcomeForm">
         <p:growl id="messages" showDetail="true"/>
 
         <p:panel id="mainPanel" header="This is the main panel">
             <p:panelGrid columns="2" columnClasses="alignTop">
                 <p:column>
-                    <h:inputText id="nameInput" value="#{helloBean.name}"></h:inputText>
+                    <p:inputText id="nameInput" value="#{helloBean.name}"></p:inputText>
                 </p:column>
                 <p:column>
                     <p:commandButton id="welcomeBtn" value="Welcome Me" actionListener="#{helloBean.welcome}" update="outputPanel"/>
