--- a/absence-tracker/src/main/webapp/index.xhtml
+++ b/absence-tracker/src/main/webapp/index.xhtml
@@ -3,13 +3,16 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:p="http://primefaces.org/ui">
+        xmlns:p="http://primefaces.org/ui"
+      xmlns:sec="http://www.springframework.org/security/tags">
 
 <h:head>
     <title>JSF 2.0 Hello World</title>
 </h:head>
 <h:body>
     <h2>JSF 2.0 Hello World Example - hello.xhtml</h2>
+    <!-- View element level Spring Security : only can view for who has the role 'ROLE_ADMIN' -->
+    <sec:authorize access="hasAnyRole({'ADMIN','MANAGER','EMPLOYEE'})">
     <h:form id="welcomeForm">
         <p:growl id="messages" showDetail="true"/>
 
@@ -28,5 +31,6 @@
             <p:outputLabel id="welcomeName" value="Welcome : #{helloBean.name}" disabled="#{helloBean.hasUserToWelcome}" />
         </p:panel>
     </h:form>
+    </sec:authorize>
 </h:body>
 </html>
