--- a/absence-tracker/src/main/webapp/pages/unsecure/login.xhtml
+++ b/absence-tracker/src/main/webapp/pages/unsecure/login.xhtml
@@ -8,6 +8,7 @@
 <h:head>
 </h:head>
 <h:body>
+    <h:outputStylesheet library="css" name="style.css"/>
     <div align="center" style="">
 
         <h:form  id="loginForm" prependId="false">
