Added Employee and Manager Acceptance Tests

--- a/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
@@ -21,7 +21,7 @@
 
             <f:facet name="header">
                 <p:outputLabel id="mainLbl" value="Absence Tracker" style="float :left"/>
-                <p:commandButton id="logoutBtn" value="Logout" action="#{loginData.logout}" style="float :right"/>
+                <h:commandButton id="logoutBtn" value="Logout" action="#{loginData.logout}" style="float :right"/>
             </f:facet>
 
             <p:tabView id="tabPanel">
