Added Role Validation and completed Login and Logout Feature and test

--- a/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
@@ -17,7 +17,7 @@
 
         <p:growl id="messages" showDetail="true"/>
 
-        <p:panel id="mainPanel" header="Absence Tracker">
+        <p:panel id="mainPanel" styleClass="mainPanel" header="Absence Tracker">
 
             <f:facet name="header">
                 <p:outputLabel id="mainLbl" value="Absence Tracker" style="float :left"/>
