Added Create Department Dialog

--- a/absence-tracker/src/main/webapp/pages/secure/admin/admin.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/admin/admin.xhtml
@@ -1,10 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core">
 
+<h:form id="adminForm" prependId="false">
 <p:menubar>
     <p:submenu label="Department">
-        <p:menuitem value="Create" url="#"/>
+        <p:menuitem id="CreateDept" value="Create"
+                    actionListener="#{departmentController.clearDepartment}"
+                    action="#{navigationController.showAddDepartmentDialog}"/>
         <p:separator />
         <p:menuitem value="Browse" url="#"/>
     </p:submenu>
@@ -16,9 +21,10 @@
     </p:submenu>
 
 </p:menubar>
-
 <p:outputLabel id="adminrole" value="You have admin access!"/>
+</h:form>
 
+<ui:include src="department/addDepartmentDialog.xhtml"/>
 </html>
 
 
