--- a/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/dashboard.xhtml
@@ -9,7 +9,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-    <title>JSF 2.0 Hello World</title>
+    <title>Absence Tracker</title>
 </h:head>
 <h:body>
     <h:outputStylesheet library="css" name="style.css"/>
@@ -17,7 +17,7 @@
 
         <p:growl id="messages" showDetail="true"/>
 
-        <p:panel id="mainPanel" styleClass="mainPanel" header="Absence Tracker">
+        <p:panel id="dashboardPanel" styleClass="mainPanel" header="Absence Tracker">
 
             <f:facet name="header">
                 <p:outputLabel id="mainLbl" value="Absence Tracker" style="float :left"/>
