Added Acceptance Test for Create Department

--- a/absence-tracker-acceptance-test/src/test/resources/report/report.fragment.html
+++ b/absence-tracker-acceptance-test/src/test/resources/report/report.fragment.html
@@ -32,12 +32,12 @@
                 if (developerMode) {
                     $('#toggle_dev_mode').text(BUTTON_BUSINESS);
                     $('.devView').show();
-                    $('a').filter(':contains("Screenshot 1")').show();
+                    $('a').filter(':contains("Screenshot")').show();
                 } else{
                     $('#toggle_dev_mode').text(BUTTON_DEVELOPER);
                     $('.devView').hide();
                     $('.devViewDetail').hide();
-                    $('a').filter(':contains("Screenshot 1")').hide();
+                    $('a').filter(':contains("Screenshot")').hide();
                 }
 
             };
