--- a/absence-tracker/src/main/webapp/pages/secure/admin/department/browseDepartmentsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/admin/department/browseDepartmentsDialog.xhtml
@@ -21,7 +21,7 @@
                 </p:column>
 
                 <p:column id="managerName" headerText="Manager">
-                    <h:outputText value="TODO: Manager Name"/>
+                    <h:outputText value="#{row.manager}"/>
                 </p:column>
             </p:dataTable>
 
