--- a/absence-tracker/src/main/webapp/pages/secure/admin/employee/browseEmployeesDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/admin/employee/browseEmployeesDialog.xhtml
@@ -17,7 +17,7 @@
                 </p:column>
 
                 <p:column id="empName" headerText="Name">
-                    <h:outputText value="#{row.name}"/>
+                    <h:outputText value="#{row.fullname}"/>
                 </p:column>
 
                 <p:column id="deptName" headerText="Department">
