--- a/absence-tracker/src/main/webapp/pages/secure/holiday/authorise.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/authorise.xhtml
@@ -1,7 +1,8 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
 <p:outputLabel id="managerrole" value="You have manager access!"/>
 
-</html>
+</ui:composition>
