--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
@@ -1,5 +1,6 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
 <p:outputLabel id="employerole" value="You have employee access!"/>
@@ -10,27 +11,26 @@
         <h:panelGrid columns="2">
 
             <p:outputLabel id="holidayTotalLbl" for="holidayTotal" value="Total:"/>
-            <h:outputText id="holidayTotal" value="256" style="color: black"/>
+            <h:outputText id="holidayTotal" value="#{holidayManagementController.holidayAllowance.total}" style="color: black"/>
 
             <p:separator/>
             <p:separator/>
 
             <p:outputLabel id="holidayUsedLbl" for="holidayUsed" value="Used:"/>
-            <h:outputText id="holidayUsed" value="50" style="color: red"/>
+            <h:outputText id="holidayUsed" value="#{holidayManagementController.holidayAllowance.used}" style="color: red"/>
 
             <p:separator/>
             <p:separator/>
 
             <p:outputLabel id="holidayRemainingLbl" for="holidayRemaining" value="Remaining:"/>
-            <h:outputText id="holidayRemaining" value="206" style="color: green"/>
+            <h:outputText id="holidayRemaining" value="#{holidayManagementController.holidayAllowance.remaining}" style="color: green"/>
         </h:panelGrid>
 
     </p:panel>
 
     <p:panel id="holidayCalendarPanel" styleClass="holidayCalendarPanel" header="Holiday Calendar">
-        <p:schedule value=""/>
+       <h:outputText value="TODO:ADD CALENDAR"/>
     </p:panel>
 </h:panelGrid>
 
-
-</html>
+</ui:composition>
