--- a/absence-tracker/src/main/webapp/pages/secure/holiday/authorise.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/authorise.xhtml
@@ -1,8 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+                template="/pages/secure/secureTemplate.xhtml">
 
-<p:outputLabel id="managerrole" value="You have manager access!"/>
+      <ui:define name="pageContent">
+            <p:outputLabel id="managerrole" value="You have manager access!"/>
+      </ui:define>
+
 
 </ui:composition>
