--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
@@ -1,7 +1,10 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                template="/pages/secure/secureTemplate.xhtml">
+
+    <ui:define name="pageContent">
 
     <p:outputLabel id="employerole" value="You have employee access!"/>
 
@@ -39,4 +42,5 @@
         </h:panelGrid>
     </h:form>
 
+    </ui:define>
 </ui:composition>
